# document-checker-course

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  run_demo.sh
apps/streamlit/: app.py
artifacts/metrics/: dataset_index.csv
artifacts/models/: text_tfidf_linearsvc.joblib  text_tfidf_logreg.joblib
artifacts/ocr_eval/: manual_annotation_list.csv  manual_ground_truth.csv  ocr_evaluation_results.csv  tesseract_batch_sample.csv  tesseract_single_sample.csv  tesseract_three_configs_batch.csv  tesseract_two_configs_batch.csv
data/raw/rvl-cdip-small-200/train/advertisement/: 0000103409.tif  0000344444.tif  0000445736.tif  (+156 more)
notebooks/: document_classification_baseline.ipynb
scripts/: check_dataset_paths.py  check_dataset_paths_batch.py  check_load_dataset_index.py  demo_document_pipeline.py  download_ocr_rvl_cdip.py  evaluate_ocr_engines.py  import_ocr_rvl_cdip.py  import_ocr_rvl_cdip_v2.py  inspect_dataset_index.py  prepare_manual_annotation_list.py  run_fastapi_app.py  run_single_tesseract_sample.py  run_tesseract_batch_sample.py  run_tesseract_three_configs_batch.py  save_dataset_index.py  test_ocr_metrics.py  test_subset_dataset.py  train_text_linearsvc.py
src/document_checker/: dataset.py
src/document_checker/api/: fastapi_app.py
src/document_checker/models/: text_classifier.py
src/document_checker/ocr/: metrics.py  tesseract.py
src/document_checker/pipeline/: document_pipeline.py
src/document_checker/preprocessing/: text_cleaning.py
tests/: test_document_pipeline.py  test_fastapi_app.py  test_text_classifier.py
(+3040 files in other folders)
