[project]
name = "document-checker-course"
version = "0.1.0"
description = "CPU-only document checker course project"
authors = [
    {name = "dovzhuk"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.5.6,<8.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "streamlit (>=1.57.0,<2.0.0)",
    "joblib (>=1.5.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
